--- a/connect2learn/web/index.html
+++ b/connect2learn/web/index.html
@@ -24,6 +24,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="connect2learn">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWFV1QtkJVRdH1kiKmXczjzOy5KMaup4Y"></script
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
